--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vux",
-  "version": "2.9.4",
+  "name": "vux-fork-zlt",
+  "version": "2.9.4.1",
   "main": "index.js",
   "description": "Mobile web UI based on Vue and WeUI",
   "keywords": [
